# Concurrent-Maze-Solver

./: .gitignore  CMakeLists.txt  GEMINI.md  LICENSE  Makefile  README.md
include/: common.h  solver.h  visualization.h
src/: Makefile  common.h  main.c  maze.c  maze.h  maze_hilbert.c  maze_mcmc.c  solver.c  special_characters.c  special_characters.h  tests.c  visualization.c
